refactor getPrevFrage